--- a/test/iron-icons.html
+++ b/test/iron-icons.html
@@ -16,76 +16,87 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
-  <script src="../../web-component-tester/browser.js"></script>
+  <script src="../../../@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
+  <script src="../../../wct-browser-legacy/browser.js"></script>
 
-  <link rel="import" href="../av-icons.html">
-  <link rel="import" href="../communication-icons.html">
-  <link rel="import" href="../device-icons.html">
-  <link rel="import" href="../editor-icons.html">
-  <link rel="import" href="../hardware-icons.html">
-  <link rel="import" href="../image-icons.html">
-  <link rel="import" href="../iron-icons.html">
-  <link rel="import" href="../maps-icons.html">
-  <link rel="import" href="../notification-icons.html">
-  <link rel="import" href="../places-icons.html">
-  <link rel="import" href="../social-icons.html">
+  <script type="module" src="../av-icons.js"></script>
+  <script type="module" src="../communication-icons.js"></script>
+  <script type="module" src="../device-icons.js"></script>
+  <script type="module" src="../editor-icons.js"></script>
+  <script type="module" src="../hardware-icons.js"></script>
+  <script type="module" src="../image-icons.js"></script>
+  <script type="module" src="../iron-icons.js"></script>
+  <script type="module" src="../maps-icons.js"></script>
+  <script type="module" src="../notification-icons.js"></script>
+  <script type="module" src="../places-icons.js"></script>
+  <script type="module" src="../social-icons.js"></script>
 
 </head>
 <body>
 
-  <script>
-    suite('<iron-icons>', function() {
-      suite('basic behavior', function() {
-        var meta;
-        var iconsetNames = [
-          'av',
-          'communication',
-          'device',
-          'editor',
-          'hardware',
-          'icons',
-          'image',
-          'maps',
-          'notification',
-          'places',
-          'social'
-        ];
+  <script type="module">
+import '../av-icons.js';
+import '../communication-icons.js';
+import '../device-icons.js';
+import '../editor-icons.js';
+import '../hardware-icons.js';
+import '../image-icons.js';
+import '../iron-icons.js';
+import '../maps-icons.js';
+import '../notification-icons.js';
+import '../places-icons.js';
+import '../social-icons.js';
+suite('<iron-icons>', function() {
+  suite('basic behavior', function() {
+    var meta;
+    var iconsetNames = [
+      'av',
+      'communication',
+      'device',
+      'editor',
+      'hardware',
+      'icons',
+      'image',
+      'maps',
+      'notification',
+      'places',
+      'social'
+    ];
 
-        setup(function() {
-          meta = document.createElement('iron-meta');
-          meta.type = 'iconset';
-        });
-
-        test('all uniquely named', function() {
-          var allIcons = {};
-          for (var i = 0; i < iconsetNames.length; i++) {
-            var iconset = meta.byKey(iconsetNames[i]);
-            expect(iconset).to.be.ok;
-
-            var iconNames = iconset.getIconNames();
-            expect(iconNames).to.not.be.empty;
-
-            for (var j = 0; j < iconNames.length; j++) {
-              var iconName = iconNames[j];
-              var parts = iconName.split(':');
-
-              expect(parts).to.have.length(2);
-              expect(parts[0]).to.equal(iconsetNames[i]);
-              expect(parts[1]).to.have.length.at.least(1);
-
-              expect(allIcons.hasOwnProperty(iconName)).to.be.false;
-              allIcons[iconName] = true;
-            }
-          }
-
-          // Sanity check.
-          expect(Object.getOwnPropertyNames(allIcons))
-              .to.have.length.of.at.least(iconsetNames.length);
-        });
-      });
+    setup(function() {
+      meta = document.createElement('iron-meta');
+      meta.type = 'iconset';
     });
-  </script>
+
+    test('all uniquely named', function() {
+      var allIcons = {};
+      for (var i = 0; i < iconsetNames.length; i++) {
+        var iconset = meta.byKey(iconsetNames[i]);
+        expect(iconset).to.be.ok;
+
+        var iconNames = iconset.getIconNames();
+        expect(iconNames).to.not.be.empty;
+
+        for (var j = 0; j < iconNames.length; j++) {
+          var iconName = iconNames[j];
+          var parts = iconName.split(':');
+
+          expect(parts).to.have.length(2);
+          expect(parts[0]).to.equal(iconsetNames[i]);
+          expect(parts[1]).to.have.length.at.least(1);
+
+          expect(allIcons.hasOwnProperty(iconName)).to.be.false;
+          allIcons[iconName] = true;
+        }
+      }
+
+      // Sanity check.
+      expect(Object.getOwnPropertyNames(allIcons))
+          .to.have.length.of.at.least(iconsetNames.length);
+    });
+  });
+});
+</script>
 
 </body>
 </html>
