--- a/test/index.html
+++ b/test/index.html
@@ -16,7 +16,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 </head>
 <body>
   <script>
-    WCT.loadSuites(['iron-icons.html', 'iron-icons.html?wc-shadydom=true&wc-ce=true']);
+    WCT.loadSuites(
+        ['iron-icons.html', 'iron-icons.html?wc-shadydom=true&wc-ce=true']);
   </script>
 </body>
 </html>
